# my_zeromq

./: CMakeLists.txt
include/: header.h
tests/: client.c  server.c
